@@ -4,6 +4,7 @@ Pending changes in the mainline
 * Dynamic negotiation of SOP classes for C-Store SCU
 * Creation of DICOM instances using the REST API
 * Embedding of images within DICOM instances
+* Adding/removal/modification of remote modalities/peers through REST
 * Reuse of the previous SCU connection to avoid unecessary handshakes
 * Fix missing licensing terms about reuse of some code from DCMTK
 * Various code refactorings
